--- a/client.html
+++ b/client.html
@@ -21,7 +21,7 @@ function onReady() { 'use strict';
 			input.val("");
 		}
 	});
-	//setInterval(reloadWindow, 2000);
+	setInterval(reloadWindow, 5000);
 }
 
 function getParameterByName(name) {
