Use HTTP::Daemon for http request handling

--- a/client.html
+++ b/client.html
@@ -100,7 +100,7 @@ function sendMessage(message) { 'use strict';
 
 <style type="text/css">
 	html, body {
-		font-family: ;
+		font-family: monospace;
 		height: 100%;
 		width: 100%;
 		padding: 0;
