--- a/client.html
+++ b/client.html
@@ -10,6 +10,7 @@ $(document).ready(onReady);
 
 var baseUrl = '.';
 var password = 's3cr3t';
+var pollInterval = 5000;
 
 var windowNumber = 1;
 
@@ -23,7 +24,7 @@ function onReady() { 'use strict';
 			input.val("");
 		}
 	});
-	setInterval(reloadWindow, 5000);
+	setInterval(reloadWindow, pollInterval);
 }
 
 function getParameterByName(name) {
