Fix conection leak

--- a/client.html
+++ b/client.html
@@ -260,7 +260,7 @@ function sendMessage(message) { 'use strict';
 		</div>
 		<div id="bottom">
 			<span id="channelName"></span>
-			<input id="input" type="text" />
+			<input id="input" type="text" autofocus />
 		</div>
 	</div>
 </body>
