--- a/clients/polymer-js/app/index.html
+++ b/clients/polymer-js/app/index.html
@@ -23,12 +23,14 @@
         <!-- endbuild -->
 
         <!-- Place your HTML imports here -->
-        <link rel="import" href="bower_components/polymer-elements/polymer-signals/polymer-signals.html">
         <link rel="import" href="bower_components/polymer-elements/polymer-ajax/polymer-xhr.html">
+        <link rel="import" href="bower_components/polymer-elements/polymer-signals/polymer-signals.html">
+
+        <link rel="import" href="elements/json-rpc.html">
+        <link rel="import" href="elements/window-aware.html">
 
         <link rel="import" href="elements/windows.html">
         <link rel="import" href="elements/lines.html">
-        <link rel="import" href="elements/json-rpc.html">
         <link rel="import" href="elements/topic.html">
         <link rel="import" href="elements/input.html">
     </head>
