--- a/clients/polymer-js/app/index.html
+++ b/clients/polymer-js/app/index.html
@@ -17,6 +17,9 @@
         <!-- build:js scripts/vendor.js -->
         <script src="bower_components/platform/platform.js"></script>
         <script src="bower_components/polymer/polymer.js"></script>
+
+        <script src="bower_components/crypto-js/rollups/sha512.js"></script>
+        <script src="bower_components/crypto-js/components/enc-base64.js"></script>
         <!-- endbuild -->
         <!-- build:js scripts/vendor/modernizr.js -->
         <!--<script src="bower_components/modernizr/modernizr.js"></script>-->
@@ -25,11 +28,13 @@
         <!-- Place your HTML imports here -->
         <link rel="import" href="bower_components/polymer-elements/polymer-ajax/polymer-xhr.html">
         <link rel="import" href="bower_components/polymer-elements/polymer-signals/polymer-signals.html">
+        <link rel="import" href="bower_components/polymer-elements/polymer-localstorage/polymer-localstorage.html">
 
         <link rel="import" href="elements/json-rpc.html">
         <link rel="import" href="elements/window-aware.html">
 
         <link rel="import" href="elements/windows.html">
+        <link rel="import" href="elements/settings.html">
         <link rel="import" href="elements/lines.html">
         <link rel="import" href="elements/topic.html">
         <link rel="import" href="elements/input.html">
@@ -37,6 +42,7 @@
     <body class="container-fluid" style="height: 100%">
         <div class="col-sm-2" style="height: 100%">
             <windows-element></windows-element>
+            <settings-element></settings-element>
         </div>
         <div class="col-sm-10" style="height: 100%">
             <topic-element></topic-element>
