--- a/clients/polymer-js/app/elements/ui/settings.html
+++ b/clients/polymer-js/app/elements/ui/settings.html
@@ -1,4 +1,4 @@
-<polymer-element name="settings-element" extends="window-aware-element">
+<polymer-element name="settings-element">
   <template>
     <form role="form" on-submit="{{save}}">
       <div class="form-group">
@@ -9,16 +9,11 @@
         <label for="password">Password</label>
         <input id="password" class="form-control" type="password" placeholder="password">
       </div>
-      <div class="form-group">
-        <label for="poll-length">Poll-length</label>
-        <input id="poll-length" type="range" min="1" max="3600" value="{{pollLength}}"> {{pollLength}}
-      </div>
       <button class="btn btn-default">Save</button>
     </form>
 
     <polymer-localstorage autoSaveDisabled id="urlStore" name="irssi-remote-client-url" value="{{url}}"></polymer-localstorage>
     <polymer-localstorage autoSaveDisabled id="passwordStore" name="irssi-remote-client-password" value="{{password}}"></polymer-localstorage>
-    <polymer-localstorage autoSaveDisabled id="pollLengthStore" name="irssi-remote-client-pollLength" value="{{pollLength}}"></polymer-localstorage>
   </template>
   <script>
     Polymer('settings-element', {
@@ -26,13 +21,20 @@
       password: '',
       pollLength: 300,
       ready: function ready(e) {
-        this.addEventListener('polymer-localstorage-load', this.notify);
+        var ready = false;
+
+        this.addEventListener('polymer-localstorage-load', function() {
+          if (!ready) {
+            this.notify();
+            this.fire('polymer-signal', {name: 'ready'});
+            ready = true;            
+          }
+        });
       },
       notify: function notify(event) {
         var settings = {
           url: this.url,
           password: this.password,
-          pollLength: this.pollLength
         };
         this.fire('polymer-signal', {name: 'settings-changed', data: settings});
       },
@@ -47,7 +49,6 @@
         // Store settings
         this.$.urlStore.save();
         this.$.passwordStore.save();
-        this.$.pollLengthStore.save();
 
         // Notify watchers
         this.notify();
