--- a/clients/polymer-js/app/index.html
+++ b/clients/polymer-js/app/index.html
@@ -30,18 +30,23 @@
         <link rel="import" href="bower_components/polymer-elements/polymer-signals/polymer-signals.html">
         <link rel="import" href="bower_components/polymer-elements/polymer-localstorage/polymer-localstorage.html">
 
-        <link rel="import" href="elements/json-rpc.html">
-        <link rel="import" href="elements/window-aware.html">
+        <link rel="import" href="elements/util/json-rpc.html">
+        <link rel="import" href="elements/util/irssi-rpc.html">
 
-        <link rel="import" href="elements/windows.html">
-        <link rel="import" href="elements/settings.html">
-        <link rel="import" href="elements/lines.html">
-        <link rel="import" href="elements/topic.html">
-        <link rel="import" href="elements/input.html">
+        <link rel="import" href="elements/ui/windows.html">
+        <link rel="import" href="elements/ui/nicklist.html">
+        <link rel="import" href="elements/ui/settings.html">
+
+        <link rel="import" href="elements/ui/lines.html">
+        <link rel="import" href="elements/ui/topic.html">
+        <link rel="import" href="elements/ui/input.html">
     </head>
     <body class="container-fluid" style="height: 100%">
-        <div class="col-sm-2" style="height: 100%">
+        <div class="col-sm-2" style="height: 100%; border-right: 1px solid black; padding: 1em">
             <windows-element></windows-element>
+            <hr>
+            <nicklist-element></nicklist-element>
+            <hr>
             <settings-element></settings-element>
         </div>
         <div class="col-sm-10" style="height: 100%">
