--- a/clients/polymer-js/app/elements/ui/windows.html
+++ b/clients/polymer-js/app/elements/ui/windows.html
@@ -3,7 +3,7 @@
     <ul>
       <template repeat="{{window in windows}}">
         <li>
-          <a on-click="{{windowClicked}}" data-refnum="{{window.refnum}}">{{window.refnum}} {{window.type}} {{window.name}}</a>
+          <a on-click="{{windowClicked}}" data-refnum="{{window.refnum}}">{{window.refnum}} {{window.name}}</a>
         </li>
       </template>
     </ul>
