Add sidebar controls

--- a/clients/polymer-js/app/elements/ui/input.html
+++ b/clients/polymer-js/app/elements/ui/input.html
@@ -10,7 +10,7 @@
         <polymer-flex-layout></polymer-flex-layout>
         <input id="line" name="line" type="text" autocomplete="off" autofocus spellcheck="true"
           class="form-control" flex>
-        <button class="btn btn-info"><span class="glyphicon glyphicon-arrow-right"></span></button>
+        <button class="btn btn-primary"><span class="glyphicon glyphicon-arrow-right"></span></button>
       </form>
     </p>
 
