Show sidebar by default
Since we don't have any other way of changing windows

--- a/clients/polymer-js/app/elements/remote-client.html
+++ b/clients/polymer-js/app/elements/remote-client.html
@@ -42,7 +42,7 @@
   </template>
   <script>
     Polymer('remote-client-element', {
-      showSidebar: false,
+      showSidebar: true,
       sidebarTab: 'windows',
       notConfiguredSignal: function notConfiguredSignal() {
         this.showSidebar = true;
