--- a/clients/polymer-js/app/index.html
+++ b/clients/polymer-js/app/index.html
@@ -9,20 +9,18 @@
         <title>Irssi remote client</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="styles/main.css">
 
+        <!-- build:css(app) styles/style.css -->
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="styles/main.css">
+        <!-- endbuild -->
 
-        <!-- build:js scripts/vendor.js -->
+        <!-- build:js(app) scripts/script.js -->
         <script src="bower_components/platform/platform.js"></script>
         <script src="bower_components/polymer/polymer.js"></script>
 
         <script src="bower_components/crypto-js/rollups/sha512.js"></script>
         <script src="bower_components/crypto-js/components/enc-base64.js"></script>
-        <!-- endbuild -->
-        <!-- build:js scripts/vendor/modernizr.js -->
-        <!--<script src="bower_components/modernizr/modernizr.js"></script>-->
         <!-- endbuild -->
 
         <!-- Place your HTML imports here -->
