--- a/clients/polymer-js/app/index.html
+++ b/clients/polymer-js/app/index.html
@@ -17,6 +17,7 @@
         <script src="bower_components/polymer/polymer.js"></script>
         <script src="bower_components/crypto-js/rollups/sha512.js"></script>
         <script src="bower_components/crypto-js/components/enc-base64.js"></script>
+        <script src="bower_components/urlize-js/urlize.js"></script>
         <!-- endbuild -->
 
         <!-- Place your HTML imports here -->
